// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Button component should render 1`] = `
<Text
  onPress={[Function]}
  style={
    Object {
      "color": "#17B582",
    }
  }
>
  Boom
</Text>
`;

exports[`The Button component should render inherit typographic styles 1`] = `
<Text
  bold={false}
  italic={false}
  style={
    Object {
      "color": "#303030",
      "fontFamily": "InterUI-Regular",
      "fontSize": 16,
      "lineHeight": 26,
    }
  }
>
  <Text
    onPress={[Function]}
    style={
      Object {
        "color": "#17B582",
      }
    }
  >
    Boom
  </Text>
</Text>
`;
